2009-11-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Do not add "ev/" to IDs of option default
	  values from the MySQL database, we create the default value
	  entries already with "ev/" now to distinguish them from
	  string/password option defaults.

2009-11-06  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added support for separate comments from the
	  printer entry and from the driver entry in the driver_printer_assoc
	  table.

2009-10-27  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added a "quick overview mode" generating a
	  list of printer entries without driver info to the
	  get_overview_from_sql_db() function. This mode is 10-20 times
	  faster than the full overview taken from the MySQL database.
	  Made the find_printer() function way faster when using a
	  MySQL database and so the server load from driver queries by
	  printer setup tools gets reduced a lot.

2009-10-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Updated the README file for all recent changes and
	  additions in the XML data format of the Foomatic database.

	* lib/Foomatic/DB.pm: Set "*ColorDevice:" in the Foomatic PPD
	  files not only based on whether the printer is a color printer
	  but also on whether the driver is capable of generating color
	  output (if appropriate information about the driver is
	  available).

2009-10-05  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added support for internationalization by
	  querying the translation tables of the MySQL database.

2009-09-24  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Let an SQL-based driver query also show the
	  list of supported printers and a printer query also the list of
	  suitable drivers, as the XML-based queries do.

2009-09-23  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added methods make_exists_in_sql_db(),
	  printer_exists_in_sql_db(), driver_exists_in_sql_db(),